# Python-and-Mysql

./: README.md
FastApi/fastapi_project-1/: pyproject.toml
FastApi/fastapi_project-1/fastapi_project_1/: main.py
MySQL/CampusX Sub queries/: Sub Queries.md
MySQL/DML (data manipulation language)/: dml.ipynb
MySQL/Sorting, Grouping and Having/: Grouping.ipynb  Having.ipynb  SQL_order_of_execution.md  Sorting.ipynb
New folder/: database.py  main.py  models.py
